// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WizardStep /> should render correctly 1`] = `
<Fragment>
  <WizardBody
    hasBodyPadding={true}
  >
    <div
      className="pf-c-form"
    >
      <div
        key="foo"
      >
        foo
      </div>
    </div>
  </WizardBody>
  <FormSpyProvider>
    <Component />
  </FormSpyProvider>
</Fragment>
`;

exports[`<WizardStep /> should render custom description 1`] = `
<Fragment>
  <WizardBody
    hasBodyPadding={true}
  >
    <div
      className="pf-c-form"
    >
      <div
        key="foo"
      >
        foo
      </div>
    </div>
  </WizardBody>
  <FormSpyProvider>
    <Component />
  </FormSpyProvider>
</Fragment>
`;

exports[`<WizardStep /> should render title with showTitle 1`] = `
<Fragment>
  <WizardBody
    hasBodyPadding={true}
  >
    <div
      className="pf-c-form"
    >
      <RenderTitle
        title={
          <div>
            title
          </div>
        }
      />
      <div
        key="foo"
      >
        foo
      </div>
    </div>
  </WizardBody>
  <FormSpyProvider>
    <Component />
  </FormSpyProvider>
</Fragment>
`;
